# morvo13

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  bandit_results.json  comprehensive_testing_report.md  docker-compose.yml  docker-entrypoint.sh  env.example  env.test.example  mypy_results.txt  pyproject.toml  pytest_output.txt  railway.json  render.yaml  ruff_results.json  sitecustomize.py  start.sh  start_frontend.py  test.db  test.db.backup  tmp.db  vulture_report.txt
.github/: dependabot.yml
.github/workflows/: backup-postgres.yml  bandit.yml  ci.yml  deploy-railway.yml  helm-release.yml  secret-scan.yml  trivy.yml
app/: main.py
app/agents/common/: __init__.py  agent_registry.py  base_agent.py
app/agents/specialists/: __init__.py  data_synthesis_agent.py  master_agent.py
app/api/: deps.py
app/api/v1/: master_agent_api.py  router.py
app/api/v1/endpoints/: auth.py  chat.py  diagnostics.py  health.py  onboarding.py  seranking.py
app/core/: cache.py  celery_app.py  error_tracking.py  error_tracking_example.py  exceptions.py  logging.py  metrics.py  rate_limiter.py  security.py  tracing.py
app/core/config/: settings.py
app/models/: __init__.py  analytics.py  base.py  business_profile.py  conversation.py  cultural_context.py  request.py  response.py  seranking.py  user.py  user_profile.py
app/repository/: seranking_repository.py
app/schemas/: agent_communication.py  chat.py  health.py  onboarding.py  user.py
app/services/: __init__.py  chat_service.py  perplexity_service.py  seranking_service.py
app/services/ai/: cultural_context_agent.py  data_synthesis_agent.py  enhanced_master_agent.py  master_agent.py  perplexity_agent.py  seranking_processor_agent.py
app/tasks/: seranking_tasks.py
app/tools/: __init__.py  cultural_context_tool.py  perplexity_tool.py  seranking_tool.py
app/utils/: onboarding_cache.py
charts/morvo/: Chart.yaml  values.yaml
charts/morvo/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
docs/: README.md  database_schema_and_data_flow.md
docs/architecture/: system_overview.mmd
docs/monitoring/: grafana-dashboard.json  grafana.md
frontend/: README.md  __init__.py  gradio_ui.py  index.html  server.py
k8s/: deployment.yaml  ingress.yaml  service.yaml
migrations/: env.py
migrations/versions/: 1ac826f6e3f2_create_initial_tables.py  58d0d8b22dba_add_superuser_field.py  7d397c2cc026_add_enterprise_models_complete_schema.py  c44ae019799c_add_conversation_turns_table.py
scripts/: backup.sh
tests/: conftest.py
tests/api/v1/endpoints/: test_auth.py  (+3 more)
tests/unit/: test_generate_simple_response.py
